Fixed all Server and Client Now work entirely

--- a/PRemote.Client/PRemote.Client.Android/Resources/layout/Main.axml
+++ b/PRemote.Client/PRemote.Client.Android/Resources/layout/Main.axml
@@ -30,6 +30,7 @@
         android:id="@+id/spr_ISO"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:theme="@android:style/Theme.Holo"
         android:layout_alignBottom="@id/txt_ISO"
         android:layout_toRightOf="@id/txt_ISO" />
 <!--Aperture Pick-->
@@ -46,6 +47,7 @@
         android:id="@+id/spr_Aperture"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:theme="@android:style/Theme.Holo"
         android:layout_alignBottom="@id/txt_Aperture"
         android:layout_toRightOf="@id/txt_Aperture" />
 <!--ShutterSpeed Pick-->
@@ -62,6 +64,7 @@
         android:id="@+id/spr_Shutter"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:theme="@android:style/Theme.Holo"
         android:layout_alignBottom="@id/txt_Shutter"
         android:layout_toRightOf="@id/txt_Shutter" />
 <!--Button-->
